tests/ui/impl-trait/auto-trait-leakage/auto-trait-leak2.stderr
error[E0277]: `Rc<Cell<i32>>` cannot be sent between threads safely
  --> $DIR/auto-trait-leak2.rs:23:10
   |
LL | fn before() -> impl Fn(i32) {
   |                ------------ within this `impl Fn(i32)`
...
LL |     send(before());
   |     ---- ^^^^^^^^ `Rc<Cell<i32>>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `impl Fn(i32)`, the trait `Send` is not implemented for `Rc<Cell<i32>>`
note: required because it's used within this closure
  --> $DIR/auto-trait-leak2.rs:13:5
   |
LL |     move |x| p.set(x)
   |     ^^^^^^^^
note: required because it appears within the type `impl Fn(i32)`
  --> $DIR/auto-trait-leak2.rs:8:16
   |
LL | fn before() -> impl Fn(i32) {
   |                ^^^^^^^^^^^^
note: required by a bound in `send`
  --> $DIR/auto-trait-leak2.rs:16:12
   |
LL | fn send<T: Send>(_: T) {}
   |            ^^^^ required by this bound in `send`
   = note: the full name for the type has been written to '$TEST_BUILD_DIR/auto-trait-leak2.long-type-$LONG_TYPE_HASH.txt'
   = note: consider using `--verbose` to print the full type name to the console

error[E0277]: `Rc<Cell<i32>>` cannot be sent between threads safely
  --> $DIR/auto-trait-leak2.rs:30:10
   |
LL |     send(after());
   |     ---- ^^^^^^^ `Rc<Cell<i32>>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
...
LL | fn after() -> impl Fn(i32) {
   |               ------------ within this `impl Fn(i32)`
   |
   = help: within `impl Fn(i32)`, the trait `Send` is not implemented for `Rc<Cell<i32>>`
note: required because it's used within this closure
  --> $DIR/auto-trait-leak2.rs:45:5
   |
LL |     move |x| p.set(x)
   |     ^^^^^^^^
note: required because it appears within the type `impl Fn(i32)`
  --> $DIR/auto-trait-leak2.rs:40:15
   |
LL | fn after() -> impl Fn(i32) {
   |               ^^^^^^^^^^^^
note: required by a bound in `send`
  --> $DIR/auto-trait-leak2.rs:16:12
   |
LL | fn send<T: Send>(_: T) {}
   |            ^^^^ required by this bound in `send`
   = note: the full name for the type has been written to '$TEST_BUILD_DIR/auto-trait-leak2.long-type-$LONG_TYPE_HASH.txt'
   = note: consider using `--verbose` to print the full type name to the console

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
